--- a/index.html
+++ b/index.html
@@ -17,6 +17,14 @@
 	</div>
 
 	<p><a href="https://teletype.in/@naidrakonov/menu" target="_blank">ПСЕВДОСАЙТ</a></p>
+
+<p><a href="janime.html" target="_blank">ЖАНРЫ АНИМЕ</a></p>
+<p><a href="apps.html" target="_blank">ПРИЛОЖЕНИЯ</a></p>
+<p><a href="cmd.html" target="_blank">КОМАНДЫ</a></p>
+<p><a href="library.html" target="_blank">БИБЛИОТЕКА</a></p>
+<p><a href="pcmbot.html" target="_blank">КОМАНДЫ КАРМАНА</a></p>
+<p><a href="websites.html" target="_blank">САЙТЫ</a></p>
+
 </div>
 
 </body>
