--- a/index.html
+++ b/index.html
@@ -2,28 +2,41 @@
 <html lang="ru">
 
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>NAIDRAKONOV</title>
-	<link rel="stylesheet" type="text/css" href="book.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>NAIDRAKONOV</title>
+<link rel="stylesheet" type="text/css" href="book.css">
 </head>
 
 <body>
 
+<img class="book-img" src="1000000000.jpg">
+
 <div class="book">
-	<img class="book-img" src="1000000000.jpg">
-	<div class="book-color-div">
-		<h1>Най Драконов </h1>
-	</div>
 
-	<p><a href="https://teletype.in/@naidrakonov/menu" target="_blank">ПСЕВДОСАЙТ</a></p>
+<div class="container">
+<div class="block"><p>ПУСТО</p><p>0</p></div>
+<div class="block"><p>ПУСТО</p><p>0</p></div>
+<div class="block"><p>ПУСТО</p><p>0</p></div>
+</div>
 
+<div class="container">
+<div class="block"><p>ПУСТО</p><p>0</p></div>
+<div class="block"><p>ПУСТО</p><p>0</p></div>
+<div class="block"><p>ПУСТО</p><p>0</p></div>
+</div>
+
+<p><a href="https://teletype.in/@naidrakonov/menu" target="_blank">ПСЕВДОСАЙТ</a></p>
 <p><a href="janime.html" target="_blank">ЖАНРЫ АНИМЕ</a></p>
 <p><a href="apps.html" target="_blank">ПРИЛОЖЕНИЯ</a></p>
 <p><a href="cmd.html" target="_blank">КОМАНДЫ</a></p>
 <p><a href="library.html" target="_blank">БИБЛИОТЕКА</a></p>
 <p><a href="pcmbot.html" target="_blank">КОМАНДЫ КАРМАНА</a></p>
 <p><a href="websites.html" target="_blank">САЙТЫ</a></p>
+
+<div class="book-color-div">
+<h1>Най Драконов </h1>
+</div>
 
 </div>
 
