--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 
 <body>
 
-<img class="book-img" src="1000000000.jpg">
+<img class="cover" src="1000000000.jpg">
 
-<div class="book">
+<div class="main-block">
 
 <div class="container">
-<div class="block"><p>ПУСТО</p><p>0</p></div>
-<div class="block"><p>ПУСТО</p><p>0</p></div>
-<div class="block"><p>ПУСТО</p><p>0</p></div>
+<div class="block"><p>LISTS</p><p>0</p></div>
+<div class="block"><p>КАНАЛЫ</p><p>0</p></div>
+<div class="block"><p>GROUPS</p><p>0</p></div>
 </div>
 
 <div class="container">
