--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
 
 <div class="main-block">
 
-<div class="container">
-<div class="block"><p>LISTS</p><p>0</p></div>
-<div class="block"><p>КАНАЛЫ</p><p>0</p></div>
-<div class="block"><p>GROUPS</p><p>0</p></div>
+<div class="main-block-container">
+<div class="main-block-container-mini-block"><p>LISTS</p><p>0</p></div>
+<div class="main-block-container-mini-block"><p>КАНАЛЫ</p><p>0</p></div>
+<div class="main-block-container-mini-block"><p>GROUPS</p><p>0</p></div>
 </div>
 
-<div class="container">
-<div class="block"><p>ПУСТО</p><p>0</p></div>
-<div class="block"><p>ПУСТО</p><p>0</p></div>
-<div class="block"><p>ПУСТО</p><p>0</p></div>
+<div class="main-block-container">
+<div class="main-block-container-mini-block"><p>ПУСТО</p><p>0</p></div>
+<div class="main-block-container-mini-block"><p>ПУСТО</p><p>0</p></div>
+<div class="main-block-container-mini-block"><p>ПУСТО</p><p>0</p></div>
 </div>
 
 <p><a href="https://teletype.in/@naidrakonov/menu" target="_blank">ПСЕВДОСАЙТ</a></p>
@@ -34,9 +34,10 @@
 <p><a href="pcmbot.html" target="_blank">КОМАНДЫ КАРМАНА</a></p>
 <p><a href="websites.html" target="_blank">САЙТЫ</a></p>
 
-<div class="book-color-div">
+<div class="main-block-color-div">
 <h1>Най Драконов </h1>
 </div>
+<img class="main-block-img" src="1000000000.jpg">
 
 </div>
 
