--- a/index.html
+++ b/index.html
@@ -21,10 +21,18 @@
 </div>
 
 <div class="main-block-container">
-<div class="main-block-container-mini-block"><p>ПУСТО</p><p>0</p></div>
-<div class="main-block-container-mini-block"><p>ПУСТО</p><p>0</p></div>
-<div class="main-block-container-mini-block"><p>ПУСТО</p><p>0</p></div>
+<div class="main-block-container-mini-block"><p>NOTES</p><p>0</p></div>
+<div class="main-block-container-mini-block"><p>WIKI</p><p>0</p></div>
+<div class="main-block-container-mini-block"><p>BOTS</p><p>0</p></div>
 </div>
+
+<div class="main-block-container">
+<div class="main-block-container-mini-block"><p>VIDEO</p><p>0</p></div>
+<div class="main-block-container-mini-block"><p>СТАТЬИ</p><p>0</p></div>
+<div class="main-block-container-mini-block"><p>APPS</p><p>0</p></div>
+</div>
+
+<!-- ======================================================================================================================= -->
 
 <p><a href="https://teletype.in/@naidrakonov/menu" target="_blank">ПСЕВДОСАЙТ</a></p>
 <p><a href="janime.html" target="_blank">ЖАНРЫ АНИМЕ</a></p>
