--- a/index.html
+++ b/index.html
@@ -43,17 +43,28 @@
 <p><a href="websites.html" target="_blank">САЙТЫ</a></p>
 
 <div class="main-block-color-div">
-<h1>Най Драконов </h1>
+<p>Най Драконов Nai Drakonov naidrakonov Иван Иванов 15.01.2000 15 01 2000 15 январь 2000 НАЙ ДРАКОНОВ NAI DRAKONOV NAIDRAKONOV 15 ЯНВАРЬ 2000 ДРАКОНЫ dragons биография biography дата рождения date of birth поиски поиск 2000 год 15 January 2000</p>
 </div>
 
 <!-- ======================================================================================================================= -->
 
 <img class="main-block-img" src="14c587a3918a30e1b2f07.gif">
-<img class="main-block-img" src="5bf4ab89-39f0-486a-90dc-ee7f571d6eba.png">
 <img class="main-block-img" src="2edc99ad-f8b8-42b3-aa73-935a1165c85f.png">
+<img class="main-block-img" src="5bf4ab89-39f0-486a-90dc-ee7f571d6eba.png">
+
 <div class="main-block-color-div">
-<h1>Най Драконов </h1>
+<ul>
+    <li>Page</li>
+    <li>Personal information</li>
+    <li>Skills</li>
+    <li>Социальные сети</li>
+    <li>Mail (email)</li>
+    <li>List anime</li>
+    <li>My facts</li>
+    <li>My Teletype</li>
+</ul>
 </div>
+
 <img class="main-block-img" src="c0c2246aead50113e1ff4.gif">
 <div class="main-block-color-div">
 <h1>Най Драконов </h1>
